; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/tpm/extr_tpm20.c_tpm20_save_state.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/tpm/extr_tpm20.c_tpm20_save_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tpm_sc = type { i32, i32 (%struct.tpm_sc*, i32)*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @tpm20_save_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tpm20_save_state(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.tpm_sc*, align 8
  %7 = alloca [12 x i32], align 16
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = bitcast [12 x i32]* %7 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %8, i8 0, i64 48, i1 false)
  %9 = bitcast i8* %8 to [12 x i32]*
  %10 = getelementptr inbounds [12 x i32], [12 x i32]* %9, i32 0, i32 0
  store i32 128, i32* %10, align 16
  %11 = getelementptr inbounds [12 x i32], [12 x i32]* %9, i32 0, i32 1
  store i32 1, i32* %11, align 4
  %12 = getelementptr inbounds [12 x i32], [12 x i32]* %9, i32 0, i32 5
  store i32 12, i32* %12, align 4
  %13 = getelementptr inbounds [12 x i32], [12 x i32]* %9, i32 0, i32 8
  store i32 1, i32* %13, align 16
  %14 = getelementptr inbounds [12 x i32], [12 x i32]* %9, i32 0, i32 9
  store i32 69, i32* %14, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call %struct.tpm_sc* @device_get_softc(i32 %15)
  store %struct.tpm_sc* %16, %struct.tpm_sc** %6, align 8
  %17 = load i32, i32* %5, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %2
  %20 = getelementptr inbounds [12 x i32], [12 x i32]* %7, i64 0, i64 11
  store i32 1, i32* %20, align 4
  br label %21

21:                                               ; preds = %19, %2
  %22 = load %struct.tpm_sc*, %struct.tpm_sc** %6, align 8
  %23 = icmp eq %struct.tpm_sc* %22, null
  br i1 %23, label %29, label %24

24:                                               ; preds = %21
  %25 = load %struct.tpm_sc*, %struct.tpm_sc** %6, align 8
  %26 = getelementptr inbounds %struct.tpm_sc, %struct.tpm_sc* %25, i32 0, i32 2
  %27 = load i32*, i32** %26, align 8
  %28 = icmp eq i32* %27, null
  br i1 %28, label %29, label %30

29:                                               ; preds = %24, %21
  store i32 0, i32* %3, align 4
  br label %47

30:                                               ; preds = %24
  %31 = load %struct.tpm_sc*, %struct.tpm_sc** %6, align 8
  %32 = getelementptr inbounds %struct.tpm_sc, %struct.tpm_sc* %31, i32 0, i32 0
  %33 = call i32 @sx_xlock(i32* %32)
  %34 = load %struct.tpm_sc*, %struct.tpm_sc** %6, align 8
  %35 = getelementptr inbounds %struct.tpm_sc, %struct.tpm_sc* %34, i32 0, i32 2
  %36 = load i32*, i32** %35, align 8
  %37 = getelementptr inbounds [12 x i32], [12 x i32]* %7, i64 0, i64 0
  %38 = call i32 @memcpy(i32* %36, i32* %37, i32 48)
  %39 = load %struct.tpm_sc*, %struct.tpm_sc** %6, align 8
  %40 = getelementptr inbounds %struct.tpm_sc, %struct.tpm_sc* %39, i32 0, i32 1
  %41 = load i32 (%struct.tpm_sc*, i32)*, i32 (%struct.tpm_sc*, i32)** %40, align 8
  %42 = load %struct.tpm_sc*, %struct.tpm_sc** %6, align 8
  %43 = call i32 %41(%struct.tpm_sc* %42, i32 48)
  %44 = load %struct.tpm_sc*, %struct.tpm_sc** %6, align 8
  %45 = getelementptr inbounds %struct.tpm_sc, %struct.tpm_sc* %44, i32 0, i32 0
  %46 = call i32 @sx_xunlock(i32* %45)
  store i32 0, i32* %3, align 4
  br label %47

47:                                               ; preds = %30, %29
  %48 = load i32, i32* %3, align 4
  ret i32 %48
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local %struct.tpm_sc* @device_get_softc(i32) #2

declare dso_local i32 @sx_xlock(i32*) #2

declare dso_local i32 @memcpy(i32*, i32*, i32) #2

declare dso_local i32 @sx_xunlock(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
